review updates, prod rdy

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/images/logo-no-text.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Manjari:wght@100;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="pottery by vimimade" />
-    <link rel="apple-touch-icon" href="../src/images/logo-no-text.png" />
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="vimimade ceramics" />
+    <meta
+      property="og:description"
+      content="pottery by vimimade - handcrafted ceramic creations"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png" />
+    <meta property="og:url" content="https://vimimade.com" />
+    <meta property="og:type" content="website" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <title>vimimade</title>
   </head>
   <body>
