--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -29,6 +25,40 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <title>vimimade</title>
+    <style>
+      :root {
+        /* Base sizes */
+        --page-width: 140rem;
+        --container-padding: 4rem;
+
+        /* Font sizes */
+        --font-size-base: 16px;
+        --line-height-base: 1.5;
+
+        /* Spacing */
+        --spacing-unit: 8px;
+        --spacing-xs: calc(var(--spacing-unit) * 1); /* 8px */
+        --spacing-sm: calc(var(--spacing-unit) * 2); /* 16px */
+        --spacing-md: calc(var(--spacing-unit) * 3); /* 24px */
+        --spacing-lg: calc(var(--spacing-unit) * 4); /* 32px */
+        --spacing-xl: calc(var(--spacing-unit) * 5); /* 40px */
+      }
+
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Work Sans', sans-serif;
+        font-size: var(--font-size-base);
+        line-height: var(--line-height-base);
+      }
+
+      #root {
+        max-width: var(--page-width);
+        margin: 0 auto;
+        padding: 0 var(--container-padding);
+        background-color: #f9f6ee;
+      }
+    </style>
   </head>
   <body>
     <noscript>error</noscript>
